# RuView

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: aether-arena-harness.yml  bench-regression.yml  bfld-mqtt-integration.yml  cd.yml  ci.yml  clone-tracking.yml  cog-ha-matter-release.yml  dashboard-a11y.yml  dashboard-pages.yml  desktop-release.yml  firmware-ci.yml  firmware-qemu.yml  fix-regression-guard.yml  mqtt-integration.yml  nvsim-server-docker.yml  pip-release.yml  pointcloud-pages.yml  ruview-npm-release.yml  ruview-swarm-ci.yml  security-scan.yml  sensing-server-docker.yml  threejs-pages.yml  verify-pipeline.yml
aether-arena/space/: requirements.txt
api-docs/adr/: ADR-154-signal-dsp-beyond-sota.md
benchmarks/wiflow-std/: RESULTS.md  tiny_edge_bench.py
dashboard/: package-lock.json
docs/: ESTATE-DISPOSITION.md  WITNESS-LOG-110.md
docs/adr/: ADR-118-bfld-beamforming-feedback-layer-for-detection.md  ADR-119-bfld-frame-format-and-wire-protocol.md  ADR-120-bfld-privacy-class-and-hash-rotation.md  ADR-121-bfld-identity-risk-scoring.md  ADR-122-bfld-ruview-ha-matter-exposure.md  ADR-150-rf-foundation-encoder.md  ADR-152-wifi-pose-sota-2026-intake.md  ADR-250-adaptive-gamma-entrainment.md  ADR-262-rufield-ruview-integration.md  ADR-263-ruview-npm-harness-deep-review.md  ADR-264-rvagent-mcp-and-cli-npm-deep-review.md  ADR-265-ruview-npm-distribution-strategy.md
docs/integration/: calibration-appliance-integration.md
firmware/esp32-csi-node/: README.md
firmware/esp32-csi-node/main/: CMakeLists.txt  c6_sync_espnow.c  c6_sync_espnow.h  main.c
firmware/esp32-gamma-stim/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/esp32-gamma-stim/main/: CMakeLists.txt  Kconfig.projbuild  main.c  stim_core.c  stim_core.h
nvsim/: sw.js.map
pointcloud/: index.html
scripts/: run-ruview-linux.sh
tools/ruview-cli/: package.json
tools/ruview-mcp/: package-lock.json
ui/mobile/: package-lock.json  package.json
v2/: Cargo.toml
v2/crates/ruview-gamma/: Cargo.toml  README.md
v2/crates/ruview-gamma/benches/: optimizer_bench.rs
v2/crates/ruview-gamma/src/: bandit.rs  lib.rs  math.rs  objective.rs  optimizer.rs  proof.rs  response.rs  ruflo.rs  safety.rs  session.rs  simulator.rs  stimulus.rs
(+57 files in other folders)
